# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Days/: Day.hpp  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp
src/Libraries/: definitions.hpp  utils.cpp  utils.hpp  utils.tpp
